kubernetes/k3s-01/workloads/firefly/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  namespace: firefly
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: firefly
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
        - name: firefly
          image: docker.io/fireflyiii/core:version-6.2.9@sha256:e0edbf2cb1b73b4c06967917f0d586e9ac29e7d24bbceaab9043da6cd161040e
          startupProbe:
            httpGet:
              path: /health
              port: 8080
          ports:
            - containerPort: 8080
