kubernetes/k3s-01/workloads/firefly/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly
  namespace: firefly
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: firefly
