kubernetes/k3s-01/workloads/firefly/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: firefly
  namespace: firefly
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: firefly
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: mariadb
        podSelector:
          matchLabels:
            app: mariadb
      ports:
        - protocol: TCP
          port: 3306
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
